force-app/main/default/objects/Lead__c/fields/Audit_Location__c.field-meta.xml
<CustomField>
    <fullName>Audit_Location__c</fullName>
    <label>Audit Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Bengaluru</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>