force-app/main/default/objects/Lead__c/fields/Audit_Time__c.field-meta.xml
<CustomField>
    <fullName>Audit_Time__c</fullName>
    <label>Audit Time</label>
    <type>Time</type>
</CustomField>