force-app/main/default/objects/Lead__c/fields/Audited__c.field-meta.xml
<CustomField>
    <fullName>Audited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audited</label>
    <type>Checkbox</type>
</CustomField>