force-app/main/default/objects/Lead__c/fields/Customer_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requirement__c</fullName>
    <label>Customer Requirement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>QC head</fullName>
            </value>
            <value>
                <fullName>Commercial head</fullName>
            </value>
            <value>
                <fullName>End user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>