force-app/main/default/objects/Lead__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Contract manufacturer</fullName>
            </value>
            <value>
                <fullName>Marketed by</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>