force-app/main/default/objects/Lead__c/fields/Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DoNotCall</label>
    <type>Checkbox</type>
</CustomField>