force-app/main/default/objects/Lead__c/fields/Industry_Verticle__c.field-meta.xml
<CustomField>
    <fullName>Industry_Verticle__c</fullName>
    <label>Industry Verticle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>