force-app/main/default/objects/Lead__c/fields/Junk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Junk_Notes__c</fullName>
    <label>Junk Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>