force-app/main/default/objects/Lead__c/fields/Junk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Junk_Reason__c</fullName>
    <label>Junk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No response from Customer</fullName>
            </value>
            <value>
                <fullName>Customer not interested anymore</fullName>
            </value>
            <value>
                <fullName>Inactive Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>