force-app/main/default/objects/Lead__c/fields/Lead_Classification__c.field-meta.xml
<CustomField>
    <fullName>Lead_Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teir 1</fullName>
            </value>
            <value>
                <fullName>Teir 2</fullName>
            </value>
            <value>
                <fullName>Teir 3</fullName>
            </value>
            <value>
                <fullName>Teir 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>