force-app/main/default/objects/Lead__c/fields/Lead_opted_for_Audit__c.field-meta.xml
<CustomField>
    <fullName>Lead_opted_for_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hasopted Audit</label>
    <type>Checkbox</type>
</CustomField>