force-app/main/default/objects/Lead__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Cold call</fullName>
            </value>
            <value>
                <fullName>Bulk upload</fullName>
            </value>
            <value>
                <fullName>Web to lead</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>