force-app/main/default/objects/Lead__c/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <label>Site Onboarding Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Research</fullName>
            </value>
            <value>
                <fullName>Initial Contact</fullName>
            </value>
            <value>
                <fullName>Negotiation &amp; Agreement</fullName>
            </value>
            <value>
                <fullName>Legal &amp; Documentation</fullName>
            </value>
            <value>
                <fullName>Site Permit</fullName>
            </value>
            <value>
                <fullName>Site Approval</fullName>
            </value>
            <value>
                <fullName>Ready For Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>