force-app/main/default/objects/Lead__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Fix Appointment</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Convert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>