force-app/main/default/objects/Lead__c/fields/location_of_test__c.field-meta.xml
<CustomField>
    <fullName>location_of_test__c</fullName>
    <label>Location of Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer location</fullName>
            </value>
            <value>
                <fullName>ALS Global location</fullName>
                <default>true</default>
                <label>ALS Global location</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>