force-app/main/default/objects/Lead__c/fields/Mark_Visit_as_Completed__c.field-meta.xml
<CustomField>
    <fullName>Mark_Visit_as_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark Visit as Completed</label>
    <type>Checkbox</type>
</CustomField>