force-app/main/default/objects/Lead__c/fields/No_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Employees__c</fullName>
    <label>NumberOfEmployees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>