force-app/main/default/objects/Lead__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
                <isActive>false</isActive>
                <label>Bangalore</label>
            </value>
            <value>
                <fullName>Gurgaon</fullName>
                <isActive>false</isActive>
                <label>Gurgaon</label>
            </value>
            <value>
                <fullName>Indore</fullName>
                <isActive>false</isActive>
                <label>Indore</label>
            </value>
            <value>
                <fullName>Mumbai</fullName>
                <isActive>false</isActive>
                <label>Mumbai</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>