force-app/main/default/objects/Lead__c/fields/Samples__c.field-meta.xml
<CustomField>
    <fullName>Samples__c</fullName>
    <label>Samples</label>
    <length>255</length>
    <type>Text</type>
</CustomField>