force-app/main/default/objects/Lead__c/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Disqualify</fullName>
            </value>
            <value>
                <fullName>Audited</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>