force-app/main/default/objects/Lead__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>QC Head</fullName>
            </value>
            <value>
                <fullName>Commercial Head</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>