force-app/main/default/objects/Lead__c/fields/Type_of_tests__c.field-meta.xml
<CustomField>
    <fullName>Type_of_tests__c</fullName>
    <label>Type of tests</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>