force-app/main/default/objects/Lead__c/fields/Vertical_Segment__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Segment__c</fullName>
    <label>Vertical / Segment</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>