force-app/main/default/objects/Lead__c/validationRules/Check_the_SubStage.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_the_SubStage</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Sub_Stage__c , &apos;Disqualify&apos;),ISBLANK( Lost_Reason__c ) )</errorConditionFormula>
    <errorMessage>Please provide the Lost Reason</errorMessage>
</ValidationRule>