force-app/main/default/objects/Lead__c/validationRules/Classification_field_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Classification_field_validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE( Lead_Status__c ), &apos;Fix Appointment&apos;),
    ISPICKVAL(Lead_Status__c , &apos;SQL&apos;),
    ISPICKVAL(Lead_Classification__c, &apos;&apos; )
)</errorConditionFormula>
    <errorMessage>Please provide Classification before moving ahead.</errorMessage>
</ValidationRule>