force-app/main/default/objects/Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>First_Name__c</columns>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Lead_Status__c</columns>
    <columns>Company__c</columns>
    <columns>Region__c</columns>
    <columns>Phone__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>