force-app/main/default/objects/Lead__c/listViews/Converted_Leads.listView-meta.xml
<ListView>
    <fullName>Converted_Leads</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Company__c</columns>
    <columns>Lead_Status__c</columns>
    <columns>Email__c</columns>
    <columns>IsConverted__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsConverted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Lead_Status__c</field>
        <operation>equals</operation>
        <value>Convert</value>
    </filters>
    <label>Converted Leads</label>
</ListView>