force-app/main/default/objects/Lead__c/listViews/My_Lead.listView-meta.xml
<ListView>
    <fullName>My_Lead</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Lead</label>
</ListView>