force-app/main/default/objects/Lead__c/listViews/Open_Leads.listView-meta.xml
<ListView>
    <fullName>Open_Leads</fullName>
    <columns>First_Name__c</columns>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Lead_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Status__c</field>
        <operation>notEqual</operation>
        <value>Convert</value>
    </filters>
    <filters>
        <field>IsConverted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Open Leads</label>
</ListView>