force-app/main/default/objects/Lead__c/listViews/Today_s_Leads.listView-meta.xml
<ListView>
    <fullName>Today_s_Leads</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Company__c</columns>
    <columns>Lead_Status__c</columns>
    <columns>Region__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Lead_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Today&apos;s Leads</label>
</ListView>