force-app/main/default/objects/Lead__c/listViews/Total_Prospects.listView-meta.xml
<ListView>
    <fullName>Total_Prospects</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Lead_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Total Prospects</label>
</ListView>